# cloud_robot_ws

src/cloud_robot/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
src/cloud_robot/config/: cloud_hardware.yaml
src/cloud_robot/include/cloud_robot/: diffdrive_hw.hpp  encoder.hpp  servo_hw.hpp  track.hpp
src/cloud_robot/launch/: bringup.launch.py
src/cloud_robot/src/: diffdrive_hw.cpp  encoder.cpp  servo_hw.cpp  track.cpp
src/cloud_robot/urdf/: URDF_DIRECCION_X.gazebo  URDF_DIRECCION_X.trans  URDF_DIRECCION_X.xacro  materials.xacro  ros2_control.xacro
src/cloud_robot/urdf/meshes/: Joint_1_1.stl  Joint_2_1.stl  Joint_3_1.stl  Joint_4_1.stl  Joint_5_1.stl  Joint_Bridge_1_1.stl  Joint_Bridge_2_1.stl  Left_Front_Fliper_1.stl  Left_Front_Wheel_1.stl  Left_Rear_Fliper_1.stl  Left_Rear_Wheel_1.stl  Right_Front_Fliper_1.stl  Right_Front_Wheel_1.stl  Right_Rear_Fliper_1.stl  Right_Rear_Wheel_1.stl  base_link.stl
